src/test/deca/context/valid/method_call_simple_print.deca
// Test context, appel d'une méthode avec un print

class Printer {
    void testMethod() {
        println("Bonjour");
    }
}

{
    Printer printer = new Printer();
    printer.testMethod();
}