src/test/deca/context/invalid/method_got_attribute_name.deca
// Test la règle 2.3: la méthode déclare porte un nom d'un 
// attribut déjà déclaré.

class A  {
    int variableName = 5;

    void variableName(){
        println("I'm an error");
    }
}


// Resultat:
//# RULE 2.3 DOIT S'AFFICHER
//# TODOTEST
